# monkey_3d_game

./: AGENTS.md  Cargo.toml  README.md  UI_DESIGN.md  controller_main.js  copilot_documentation.md  index.html  settings.toml  structure_game.txt  todo.txt  trials.jsonl
controller_python/: controller.py
game_node/: Cargo.toml
game_node/src/: command_handler.rs  lib.rs  main.rs  state_emitter.rs  web_adapter.rs
game_node/src/utils/: camera.rs  game_functions.rs  objects.rs  pyramid.rs  setup.rs  systems_logic.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  native.rs  python.rs  web.rs
src/: camera.rs  lib.rs  main.rs  objects.rs
src/plugins/: my_plugin.rs
src/utils/: camera.rs  constants.rs  debug_functions.rs  functions.rs  game_functions.rs  global_inputs.rs  inputs.rs  keyboard_navigation.rs  macros.rs  objects.rs  pyramid.rs  settings_io.rs  setup.rs  systems_logic.rs  touch_inputs.rs  ui_components.rs
