[workspace]
resolver = "2"
members = [
    "shared",
    "game_node",
]

[workspace.dependencies]
bevy = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[profile.wasm-dev]
inherits = "dev"
opt-level = 0          # keep it debug-friendly
debug = 2              # good debug info
debug-assertions = true
overflow-checks = true
lto = "off"
codegen-units = 16
incremental = true

# optional: keep dependencies not too crazy for wasm-dev
[profile.wasm-dev.package."*"]
opt-level = 0
