[package]
name = "game_node"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.0"
console = "0.16.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
# Internal dependencies (Global)
shared = { path = "../shared" }

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.82"
wasm-bindgen = "0.2.108"

[lib]
crate-type = ["cdylib", "rlib"]
