[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
python = ["dep:pyo3"]

[dependencies]
cfg-if = "1.0"
byteorder = "1.4"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
bevy_color = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
